Prepare release 1.7.0